# swift-cpp-example

./: .gitignore  .gitlab-ci.yml  Gemfile  README.md
Shared/: ContentView.swift  MiniAppInfo.swift  OcMiniAppInfo.h  OcMiniAppInfo.mm  OcRouterInfo.h  OcRouterInfo.mm  Persistence.swift  RouterInfo.swift  SwiftUIWebView.swift  WebViewModel.swift  iOSSdkDelegateWrapper.h  iOSSdkDelegateWrapper.mm  swift-otp (iOS)-Bridging-Header.h  swift_otpApp.swift  wrapper.cpp
Tests iOS/: Tests_iOS.swift
Tests macOS/: Tests_macOS.swift
cpp/: AuthWrapper.h  AuthenticationService.h  CMakeLists.txt  Logger.h  MiniAppInfo.cpp  MiniAppInfo.h  Parse.cpp  Parse.h  ProfileDao.h  RouterInfo.cpp  RouterInfo.h  RsaTokenDao.h  iOS.cmake  iOSSdkDelegate.cpp  iOSSdkDelegate.h  iOSSdkDelegateRegister.h
fastlane/: Fastfile  README.md
swift-otp.xcodeproj/: project.pbxproj
swift-otp.xcodeproj/xcshareddata/xcschemes/: Tests_iOS.xcscheme  swift-otp.xcscheme
